////////////////////
/    Change Log    /
////////////////////


Members
---------
John Janzen                     Acknowledged
Austin Lott			Acknowledged
Cameron Stenmark                Acknowledged


2/4/2016    Syncing - Austin
2/4/2016    Syncing - John
2/4/2016    Updating - Cameron
2/12/2016   Created controller templates - Cameron
2/12/2016   Created view files - Austin